--- a/.config
+++ b/.config
@@ -2,3 +2,4 @@ CONFIG_TARGET_x86=y
 CONFIG_TARGET_x86_generic=y
 CONFIG_TARGET_x86_generic_Generic=y
 CONFIG_PACKAGE_kmod-82583V=y
+CONFIG_PACKAGE_kmod-rtl8305SC=y
