--- a/.config
+++ b/.config
@@ -16,22 +16,17 @@ CONFIG_DEFAULT_dnsmasq=y
 CONFIG_PACKAGE_kmod-usb-acm=y
 CONFIG_PACKAGE_kmod-usb-ehci=y
 CONFIG_PACKAGE_kmod-usb-wdm=y
-
 ### SD Card Support
 CONFIG_PACKAGE_kmod-sdhci=y
-
 ### USB Net
 CONFIG_PACKAGE_kmod-usb-net-rtl8150=y
 CONFIG_PACKAGE_kmod-usb-net-rtl8152=y
-
 ### Virtualization
 CONFIG_PACKAGE_kmod-kvm-amd=y
 CONFIG_PACKAGE_kmod-kvm-intel=y
 CONFIG_PACKAGE_kmod-kvm-x86=y
-
 ### Ethernet Support
 CONFIG_PACKAGE_kmod-igc=y
-
 ### Wireless Card Firmware
 CONFIG_PACKAGE_kmod-ath=y
 CONFIG_ATH_USER_REGD=y
@@ -133,10 +128,8 @@ CONFIG_PACKAGE_kmod-rtlwifi-pci=y
 CONFIG_PACKAGE_kmod-rtlwifi-usb=y
 CONFIG_PACKAGE_kmod-rtw88=y
 CONFIG_PACKAGE_kmod-wil6210=y
-
-CONFIG_PACKAGE_kmod-82583V=y
 CONFIG_PACKAGE_kmod-rtl8305SC=y
-
+CONFIG_PACKAGE_kmod-82583V=y
 CONFIG_PACKAGE_luci-app-mwan3=y
 CONFIG_PACKAGE_luci-app-udpxy=y
 CONFIG_PACKAGE_udpxy=y
@@ -145,12 +138,14 @@ CONFIG_DEFAULT_ipv6helper=y
 CONFIG_PACKAGE_ipv6helper=y
 CONFIG_PACKAGE_luci-app-zerotier=y
 CONFIG_PACKAGE_zerotier=y
+CONFIG_PACKAGE_socat=y
+CONFIG_PACKAGE_Tailscale=y
 CONFIG_PACKAGE_luci-app-wireguard=y
 CONFIG_PACKAGE_wireguard-tools=y
 CONFIG_PACKAGE_kmod-wireguard=y
 CONFIG_PACKAGE_luci-proto-wireguard=y
+CONFIG_PACKAGE_luci-lib-docker=y
+CONFIG_PACKAGE_luci-app-dockerman=y
+CONFIG_PACKAGE_luci-app-Tailscale=y
 CONFIG_PACKAGE_wpad-mesh-openssl=y
 CONFIG_PACKAGE_qrencode=y
-
-CONFIG_PACKAGE_luci-app-tailscale=y
-CONFIG_PACKAGE_luci-app-easytier=y
